# oddrn-generator

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: create_pypi_package.yaml  test.yaml
oddrn/: __init__.py  clouds.py  exceptions.py  generators.py  mixins.py  oddrn.py  path_models.py
oddrn_generator/: __init__.py  exceptions.py  generators.py  path_models.py  server_models.py
oddrn_generator/utils/: __init__.py  external_generators.py
tests/: examples.py  helpers.py  models.py  params.py  test_api_generator.py  test_blob_storage_generator.py  test_cubejs_generator.py  test_filesystem_generator.py  test_fs_generator.py  test_great_expectations.py  test_great_expectations_generator.py  test_lambda.py  test_metabase_generator.py  test_oddrn.py  test_oddrn_generator.py  test_s3_custom.py  test_s3_generator.py  test_sagemaker.py
