[tool.poetry]
name = "oddrn-generator"
version = "0.1.102"
description = "Open Data Discovery Resource Name Generator"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opendatadiscovery/oddrn-generator"
repository = "https://github.com/opendatadiscovery/oddrn-generator"
keywords = ["oddrn", "opendatadiscovery"]
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.0"
pydantic-core = "^2.18.1"
pluggy = "^1.4.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.1.1"
black = "^24.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
